[package]
name = "drafly"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "time"] }
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
html2text = "0.3"
ammonia = "3.1"
log = "0.4"
env_logger = "0.11"
base64 = "0.21"
urlencoding = "2"
jsonwebtoken = "9"
once_cell = "1.21.3"
